# designdocs

./: .bazelrc  .bazelrc.user.template  .gitignore  404.html  BUILD.bazel  CLAUDE.md  Design-Choices.md  MODULE.bazel  Manifesto.md  README.md  Raw-Discussion.md  index.html  mkdocs.yml  renovate.json  requirements.in  requirements_lock.txt
.claude/: settings.json
.devcontainer/: BUILD.bazel  Dockerfile  build_test.sh  devcontainer.json  package.json  pnpm-lock.yaml
.github/workflows/: docs.yml  renovate-lockfile.yml
Contributing/: index.html
Decisions/: index.html
Design-Choices/: index.html
Manifesto/: index.html
Raw-Discussion/: index.html
designdocs/: Contributing.md  Decisions.md  Design-Choices.md  Manifesto.md  README.md  Raw-Discussion.md
docs/: BUILD.bazel  deploy_docs.sh  docs_test.sh  mkdocs.yml  serve_docs.sh
search/: search_index.json
