load("@gazelle//:def.bzl", "gazelle")
load(
    "@rules_python//python/entry_points:py_console_script_binary.bzl",
    "py_console_script_binary",
)

package(default_visibility = ["//visibility:public"])

# Run with: bazel run //:gazelle
# Generates and updates BUILD files for Go targets.
gazelle(name = "gazelle")

# Hermetically managed mkdocs binary.
# Run directly with: bazel run //:mkdocs -- build --strict
py_console_script_binary(
    name = "mkdocs",
    pkg = "@pip//mkdocs",
    script = "mkdocs",
    deps = ["@pip//mkdocs_material"],
)

# Build the static docs site.
# Output: bazel-bin/site.tar.gz
genrule(
    name = "docs_site",
    srcs = glob(["designdocs/**/*.md"]) + ["mkdocs.yml"],
    outs = ["site.tar.gz"],
    cmd = """
        $(location :mkdocs) build --strict --site-dir $(@D)/site_tmp
        tar czf $@ -C $(@D) site_tmp
    """,
    tools = [":mkdocs"],
)
