load("@gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

# Run with: bazel run //:gazelle
# Generates and updates BUILD files for Go targets.
gazelle(name = "gazelle")

# Exposes all design docs as a Bazel target so //docs:docs_site can depend on them.
filegroup(
    name = "designdocs",
    srcs = glob(["designdocs/**/*.md"]),
    visibility = ["//docs:__pkg__"],
)
