module(
    name = "causes",
    version = "0.0.0",
)

# rules_go is required by Gazelle even before any Go code exists.
# It does not download a Go toolchain until a Go target is built.
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//.devcontainer:pnpm-lock.yaml",
    data = [
        "//.devcontainer:package.json",
        "//.devcontainer:pnpm-workspace.yaml",
    ],
)
use_repo(
    npm,
    "npm",
    "npm__at_devcontainers_cli__0.84.1",
)
