load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm__at_devcontainers_cli__0.84.1//:package_json.bzl", devcontainers_cli_bin = "bin")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

npm_link_all_packages()

devcontainers_cli_bin.devcontainer_binary(name = "devcontainer_cli")

sh_test(
    name = "build_test",
    srcs = ["build_test.sh"],
    data = [
        ":devcontainer_cli",
        "Dockerfile",
        "devcontainer.json",
        "@bazel_tools//tools/bash/runfiles",
    ],
    tags = [
        "local",
        "requires-docker",
    ],
)
