load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load(
    "@rules_python//python/entry_points:py_console_script_binary.bzl",
    "py_console_script_binary",
)

# Hermetically managed mkdocs binary.
# Run directly with: bazel run //docs:mkdocs -- build --strict
py_console_script_binary(
    name = "mkdocs",
    pkg = "@pip//mkdocs",
    script = "mkdocs",
    deps = ["@pip//mkdocs_material"],
)

# Build the static docs site.
# Output: bazel-bin/docs/site.tar.gz
genrule(
    name = "docs_site",
    srcs = ["//:designdocs", "mkdocs.yml"],
    outs = ["site.tar.gz"],
    cmd = """
        EXECROOT=$$(pwd)
        cd docs
        $$EXECROOT/$(location :mkdocs) build --strict \
            --config-file=mkdocs.yml \
            --site-dir $$EXECROOT/$(@D)/site_tmp
        tar czf $$EXECROOT/$@ -C $$EXECROOT/$(@D) site_tmp
    """,
    tools = [":mkdocs"],
)

# Deploy docs to GitHub Pages.
# Run with: bazel run //docs:deploy_docs
sh_binary(
    name = "deploy_docs",
    srcs = ["deploy_docs.sh"],
    data = [":mkdocs"],
)
