load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(
    "@rules_python//python/entry_points:py_console_script_binary.bzl",
    "py_console_script_binary",
)

# Hermetically managed mkdocs binary.
# Run directly with: bazel run //docs:mkdocs -- build --strict
py_console_script_binary(
    name = "mkdocs",
    pkg = "@pip//mkdocs",
    script = "mkdocs",
    deps = ["@pip//mkdocs_material"],
)

# Build the static docs site.
# Output: bazel-bin/docs/site.tar.gz
genrule(
    name = "docs_site",
    srcs = ["//:designdocs", "mkdocs.yml"],
    outs = ["site.tar.gz"],
    cmd = """
        EXECROOT=$$(pwd)
        cd docs
        $$EXECROOT/$(location :mkdocs) build --strict \
            --config-file=mkdocs.yml \
            --site-dir $$EXECROOT/$(@D)/site_tmp
        tar czf $$EXECROOT/$@ -C $$EXECROOT/$(@D) site_tmp
    """,
    tools = [":mkdocs"],
)

# Smoke-test the docs build. Run with: bazel test //docs:docs_test
sh_test(
    name = "docs_test",
    srcs = ["docs_test.sh"],
    data = [
        ":mkdocs",
        "//:designdocs",
        "mkdocs.yml",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

# Deploy docs to GitHub Pages.
# Run with: bazel run //docs:deploy_docs
sh_binary(
    name = "deploy_docs",
    srcs = ["deploy_docs.sh"],
    data = [
        ":mkdocs",
        "@bazel_tools//tools/bash/runfiles",
    ],
)
